--- a/EasyGo_framework/src/main/res/values/easy_go_colors.xml
+++ b/EasyGo_framework/src/main/res/values/easy_go_colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="text_color_0">#000000</color>
+    <color name="text_color_1">#333333</color>
+    <color name="text_color_2">#666666</color>
+    <color name="text_color_3">#999999</color>
+
 </resources>
