--- a/EasyGo_framework/src/main/res/layout/easy_drawer_layout.xml
+++ b/EasyGo_framework/src/main/res/layout/easy_drawer_layout.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.easygo.framework.ui.widget.EasyGoDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.easygo.framework.ui.widget.EasyGoCcbSlidingPaneLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/common_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <!-- As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions. -->
-
-    <com.easygo.framework.ui.widget.EasyGoFrameLayout
-        android:id="@+id/common_drawer_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    android:fitsSystemWindows="true"
+    android:background="#f8f8f8">
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
@@ -22,7 +15,15 @@
 
     <com.easygo.framework.ui.widget.EasyGoListView
         android:id="@+id/common_drawer_menu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_width="@dimen/x720"
+        android:layout_height="wrap_content" />
 
-</com.easygo.framework.ui.widget.EasyGoDrawerLayout>
+    <!-- As the main content view, the view below consumes the entire
+         space available using match_parent in both dimensions. -->
+
+    <com.easygo.framework.ui.widget.EasyGoFrameLayout
+        android:id="@+id/common_drawer_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent"/>
+</com.easygo.framework.ui.widget.EasyGoCcbSlidingPaneLayout>
