--- a/EasyGo_Main/src/main/res/layout/activity_main.xml
+++ b/EasyGo_Main/src/main/res/layout/activity_main.xml
@@ -23,4 +23,9 @@
         android:layout_height="wrap_content"
         android:text="跳转到test"/>
 
+    <Button
+        android:id="@+id/test_tab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="跳转到tab"/>
 </LinearLayout>
