--- a/EasyGo_framework/src/main/res/layout/easy_drawer_layout.xml
+++ b/EasyGo_framework/src/main/res/layout/easy_drawer_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.easygo.framework.ui.widget.EasyGoCcbSlidingPaneLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.easygo.framework.ui.widget.EasyGoSlidingPaneLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/common_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,4 +26,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorAccent"/>
-</com.easygo.framework.ui.widget.EasyGoCcbSlidingPaneLayout>
+</com.easygo.framework.ui.widget.EasyGoSlidingPaneLayout>
