--- a/EasyGo_framework/src/main/res/layout/easy_tab_layout.xml
+++ b/EasyGo_framework/src/main/res/layout/easy_tab_layout.xml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.easygo.framework.ui.widget.EasyGoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.easygo.framework.ui.widget.EasyGoCoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:easygo="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.easygo.framework.ui.widget.EasyGoDrawerLayout
-        android:id="@+id/easy_tab"
+    <com.easygo.framework.ui.widget.EasyGoAppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y138"/>
+        android:layout_height="wrap_content">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/common_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            easygo:layout_scrollFlags="enterAlways|scroll" />
 
+        <com.easygo.framework.ui.widget.EasyGoTabLayout
+            android:id="@+id/common_tab"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y138" />
 
-</com.easygo.framework.ui.widget.EasyGoLinearLayout>
+    </com.easygo.framework.ui.widget.EasyGoAppBarLayout>
+
+    <com.easygo.framework.ui.widget.EasyGoViewPager
+        android:id="@+id/common_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        easygo:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+</com.easygo.framework.ui.widget.EasyGoCoordinatorLayout>
